welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:16: error: ':' expected but ')' found.
def isFacingTrail(cc):Boolean = {
                    ^SlugSnail:30: error: identifier expected but '}' found.
}
^