welcome.lessons.welcome.methods.slug.SlugSnail.scala.code
def hunt(c:Color) = {
	while(!estSurBiscuit){
		leveBrosse()
		if(isFacingTrail(c) == true) {
			baisseBrosse()
			avance()
		}
		else {
			gauche()
		}
	}
	prendBiscuit()	
}

def isFacingTrail(cc):Boolean = {
	var sol:Boolean = false
	if(!estFaceMur) {
		avance()
		if(getCouleurSol == cc) {
			sol = true
		}
		recule()
	}
	return sol
}